--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ plugins:
 
 author:
   name   : "Jakub Szajner"
-  avatar : "/assets/images/bio-photo.jpg"
+  avatar : "/assets/images/IMG_6830.jpg"
   bio    : "Aspiring data scientist, currently Data Analyst in banking industry"
   links:
     - label: "GitHub"
